--- a/game-over.html
+++ b/game-over.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body id="game-over-board">
+    <audio id="sound" autoplay="autoplay">
+      <source src="rick-scream.mp3" type="audio/mp3">
+  </audio>
     <div id="title-game-over">You're dead!</div>
     <br>
     <br>
