--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
   </head>
   <body id="board">
     <div id="landing-page">
+      <div class="soundControl">
+        <img src="./images/sound.png" class="soundImg">
+      <label class="switch">
+        <input type="checkbox" onclick="toggleMuted()">
+        <span class="slider round"></span>
+      </label>
+      <audio id="sound" autoplay="autoplay" loop="loop">
+          <source src="Y2Mate.is - Rick and Morty OST   Rick and Morty Theme Remix-67KQcBwrNkQ-48k-1654983191388.mp3" type="audio/mp3">
+      </audio>
+    </div>
       <p id="title">
         Pickle Rick fell into the sewers and is being<br />
         attacked by angry rats. Kill them all!
