--- a/index.html
+++ b/index.html
@@ -8,25 +8,41 @@
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Open+Sans:wght@300&family=Russo+One&family=Zen+Dots&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,200"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Creepster&family=Open+Sans:wght@300&family=Russo+One&family=Zen+Dots&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,200"
+    />
   </head>
   <body id="board">
     <div id="landing-page">
       <div class="soundControl">
-        <img src="./images/sound.png" class="soundImg">
-      <label class="switch">
-        <input type="checkbox" onclick="toggleMuted()">
-        <span class="slider round"></span>
-      </label>
-      <audio id="sound" autoplay="autoplay" loop="loop">
-          <source src="Y2Mate.is - Rick and Morty OST   Rick and Morty Theme Remix-67KQcBwrNkQ-48k-1654983191388.mp3" type="audio/mp3">
-      </audio>
-    </div>
+        <img src="./images/sound.png" class="soundImg" />
+        <label class="switch">
+          <input type="checkbox" onclick="toggleMuted()" />
+          <span class="slider round"></span>
+        </label>
+        <img src="./images/silent-icon.png" class="silentImg" />
+        <audio id="sound" autoplay="autoplay" loop="loop">
+          <source
+            src="rick-and-morty-soundtrack.mp3"
+            type="audio/mp3"
+          />
+        </audio>
+      </div>
       <p id="title">
-        Pickle Rick fell into the sewers and is being<br />
+        Pickle Rick fell into the sewers and is being<br/>
         attacked by angry rats. Kill them all!
       </p>
       <span id="rules"
