--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
   </head>
   <body id="board">
     <audio id="sound" autoplay="autoplay" loop="loop">
-      <source
-        src="rick-and-morty-soundtrack.mp3"
-        type="audio/mp3"
-      />
+      <source src="rick-and-morty-soundtrack.mp3" type="audio/mp3" />
     </audio>
     <div class="soundControl">
       <img src="./images/sound.png" class="soundImg" />
@@ -42,7 +39,7 @@
     </div>
     <div id="landing-page">
       <p id="title">
-        Pickle Rick fell into the sewers and is being<br/>
+        Pickle Rick fell into the sewers and is being<br />
         attacked by angry rats. Kill them all!
       </p>
       <span id="rules"
@@ -50,8 +47,7 @@
           class="ratPic"
           src="images/rat.png" />&nbsp;&nbsp;killed&nbsp;&nbsp;<img
           class="pickleRickPic"
-          src="images/rickplus.png" />&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;
-        One&nbsp;&nbsp;<img
+          src="images/rickplus.png" />&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp; One&nbsp;&nbsp;<img
           class="ratPic"
           src="images/rat.png" />&nbsp;&nbsp;missed&nbsp;&nbsp;<img
           class="pickleRickPic"
@@ -60,15 +56,14 @@
       <p id="instructions1">
         Press
         <span class="material-symbols-outlined">keyboard_arrow_up</span> or
-        <span class="material-symbols-outlined">keyboard_arrow_down</span> to
-        move
+        <span class="material-symbols-outlined">keyboard_arrow_down</span> to move
       </p>
       <p id="instructions2">
-        Press <span class="material-symbols-outlined"> space_bar </span> to
-        shoot
+        Press <span class="material-symbols-outlined"> space_bar </span> to shoot
       </p>
       <button id="start-button">START</button>
     </div>
+    <div id="level-display"></div>
     <script src="./js/main.js"></script>
   </body>
 </html>
