adding spinner on page load

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
       </label>
       <img src="./images/silent-icon.png" class="silentImg" />
     </div>
-    <div id="landing-page">
+    <div id="loading">
+      <div class="spinner"></div>
+    </div>
+    <div id="landing-page" style="display: none">
       <p id="title">
         Pickle Rick fell into the sewers and is being<br />
         attacked by angry rats. Kill them all!
